New size series: photo prints.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Paper sizes for webOS
 =====================
 
-A reference of common ISO/DIN and North American paper size series.
+A reference of ISO/DIN and North American paper size series and common photo print formats.
 
-Eine Zusammenfassung gängiger DIN/ISO und nordamerikanischer Papierformate.
+Eine Zusammenfassung der DIN/ISO und nordamerikanischen Papierformate sowie gängiger Fotopapiergrößen.
